# Labs

./: Pr3.cpp
1st semechka/: Pr3.cpp
1st semechka/Lab8/: CMakeLists.txt  lab8.sln
1st semechka/Pr1/: ConsoleApplication9.cpp  Header.hpp  PR11.cpp  Source.cpp
1st semechka/Pr3/: CMakeLists.txt  input.txt
1st semechka/Pr5/: Pr5.cpp
2nd semechka/Lab1/: CMakeLists.txt  Lab1.cpp
2nd semechka/Lab2/: ConsoleApplication10.cpp  ConsoleApplication14.cpp  ConsoleApplication9.cpp  Lab2.cpp
2nd semechka/Lab3/: ConsoleApplication10.cpp
2nd semechka/Lab4/: ConsoleApplication9.cpp  lab4.cpp
2nd semechka/Lab5/: 5labv2.cpp  lab5.cpp
2nd semechka/Lab6/: CMakeLists.txt  Logger.cpp  Logger.hpp  lab6.cpp
2nd semechka/Lab7/: lab7.cpp
2nd semechka/Lab8/: Lab8.cpp
2nd semechka/Pr1/: 2pr1.cpp  2spr1.cpp  ConsoleApplication3.cpp  tryt.cpp
2nd semechka/Pr2/: ConsoleApplication5.cpp  pr2sm2.cpp  pr2sm2_1.cpp
2nd semechka/Pr3/: pr3.cpp
2nd semechka/Pr4/: 4pr.cpp  txt.txt  (+1 more)
4th semechka/: ConsoleApplication1.cpp  graph.txt  lab1.cpp  sem4lab10.cpp  sem4lab11.cpp  sem4lab12.cpp  sem4lab14.cpp  sem4lab15.cpp  sem4lab16.cpp  sem4lab18.cpp  sem4lab6.cpp  sem4lab7.cpp  sem4lab8.cpp  sem4lab9.cpp  ситуация.docx
Lab10/: Lab10.cpp
Lab6/: CMakeLists.txt
Lab6/inc/: Func.hpp
Lab6/src/: CountMatrix.cpp  Minim.cpp  Outputing.cpp  Test.cpp
Lab7/: 6lab.cpp
Lab8/: CMakeLists.txt  lab8.sln
Lab9/: Lab_9.cpp
Pr1/: ConsoleApplication9.cpp  Header.hpp  PR11.cpp  Pr1.cpp  Source.cpp
Pr3/: CMakeLists.txt  PrText.cpp  input.txt
Pr4/: Pr4.cpp
Pr6/: CMakeLists.txt  Vector.cpp
(+48 files in other folders)
